# Tournamentiq

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py  bootstrap.py  navigation.py
dashboard/components/: background.py  home.py  layout.py  match_analysis.py  match_predictor.py  match_probability_chart.py  model_insights.py  monte_carlo_analysis.py  statistics_dashboard.py  team_comparison.py  team_selector.py  tournament_simulation.py
dashboard/services/: __init__.py  match_prediction_service.py  model_insights_service.py  monte_carlo_service.py  platform_statistics_service.py  statistics_service.py  team_comparison_service.py  tournament_simulation_service.py
dashboard/ui/: __init__.py  animations.py  colors.py  components.py  flags.py  media.py  theme.py  typography.py
dashboard/views/: 1_Home.py  2_Match_Predictor.py  3_Team_Comparison.py  4_Tournament_Simulation.py  5_Monte_Carlo.py  6_Statistics.py
models/: best_model.pkl  model_ranking.csv  model_results.csv  preprocessor.pkl
notebooks/: 01_EDA.ipynb  01_dataset_summary.ipynb  02_Feature_Engineering.ipynb  02_statistics.ipynb  03_Model_Training.ipynb  03_visualizations.ipynb  04_validation.ipynb  05_base_features.ipynb
src/: __init__.py
tests/: test_legacy_services.py  test_match_prediction_service.py  test_model_insights_service.py  test_monte_carlo_service.py  test_navigation.py  test_platform_statistics_service.py  test_statistics_service.py  test_team_comparison_service.py  test_tournament_simulation_service.py
(+74 files in other folders)
